crates/cypher-hir/src/snapshots/cypher_hir__lower__tests__pattern_chain_three_nodes.snap
---
source: crates/cypher-hir/src/lower.rs
expression: render(&stmt)
---
clauses: 2
bindings: 3
nodes_in_map: 7
clause[0]: Match
clause[1]: Return(distinct=false, items=3)
binding: a (Node)
binding: b (Node)
binding: c (Node)
