crates/cypher-hir/src/snapshots/cypher_hir__lower__tests__return_star.snap
---
source: crates/cypher-hir/src/lower.rs
expression: render(&stmt)
---
clauses: 2
bindings: 1
nodes_in_map: 3
clause[0]: Match
clause[1]: Return(distinct=false, items=1)
binding: n (Node)
